--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <title>Mentalo</title>
     <meta name="description" content="description de la page"/>
     <link rel="stylesheet" href="styles/main.css">
-    <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com"> -->
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">  </head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap" rel="stylesheet">
+  </head>
   <body>
-      
       <img src="images/logo.png" id="logoMentalo" alt="logo"/>
 
     <div class="containerAddPlayer">
       <input placeholder="Entrer un joueur" class="inputAddPlayer"></input>
-      <button class="buttonAddPlayer"></button>
+      <button class="buttonAddPlayer">+</button>
     </div>
     <script src="scripts/main.js"></script>
   </body>
