--- a/index.html
+++ b/index.html
@@ -50,10 +50,12 @@
     <!-- Page des résultats -->
     <div class="pageResults">
       <h1>Resultats</h1>
-      <div class="containerChangeScore"></div>
+      <div class="containerChangeScore">
+      </div>
       <div class="button1 buttonNextQuestion"><h1>Continuer</h1></div>     
     </div>
 
+    <!-- Page des défis -->
 
 
     <script src="scripts/main.js"></script>
