--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="navBtn">
         <img src="images/replay.png" id="replay">
       </div>
-      <h1>Jeu</h1>
+      <h1 id="playerNameTitle">Jeu</h1>
       <h5 class="question"></h5>
       <div class="button1 buttonSeeResult"><h1 class="btnText">Continuer</h1></div>
       <div class="listeScoreGame"></div>
