--- a/index.html
+++ b/index.html
@@ -73,6 +73,13 @@
       <div class="button1 buttonNextPerson"><h1 class="btnText">Prochain Joueur</h1></div>     
     </div>
 
+    <!-- Écran de paramètres 
+    <div class="settingsContainer">
+      <div class="rowPlayerList"><h2 class="subTitlePlayer">louis</h2><div class="btnMinus">-</div><img src="images/level2.png"><div class="btnMore">+</div></div>
+      <div class="rowPlayerList"><h2 class="subTitlePlayer">axel</h2><div class="btnMinus">-</div><img src="images/level1.png"><div class="btnMore">+</div></div>
+      <div class="rowPlayerList"><h2 class="subTitlePlayer">mireille</h2><div class="btnMinus">-</div><img src="images/level0.png"><div class="btnMore">+</div></div>
+    </div> -->
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
