--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
 
     <div class="howToPlayContainer">
       <img src="images/close.png" class="closeHowToPlay">
-      <h1>Comment jouer à Mentalo ?</h1>
+      <h1>Comment jouer à Mentalo&nbsp;?</h1>
       <div class="chooseSectionHow">
         <span id="sectionNiveaux" class="sectionBeer"><h4>Niveaux</h4></span>
         <span id="sectionPartie"class="sectionBeer"><h4>La partie</h4></span>
         <span id="sectionGage"class="sectionBeer"><h4>Les gages</h4></span>
       </div>
       <div class="howToNiveaux">
-        <p>Mentalo est le premier jeu à boire qui pense aussi à Sam ! En indiquant la quantité d'alcool que vous souhaitez boire, le jeu s'adapte à chacun.</p>
+        <p>Mentalo est le premier jeu à boire qui pense aussi à Sam ! En indiquant la quantité d'alcool que vous souhaitez boire, le jeu s'adapte à chacun. Pour cela, clique sur les points blancs et sur les pintes pour ajuster ton niveau</p>
         <br>
         <p>Nous te conseillons de commencer doucement avec une ou deux pintes. Le niveau influence le nombre de gorgées que tu recevras comme pénalités</p>
         <img src="images/level1.png">
