--- a/index.html
+++ b/index.html
@@ -119,6 +119,21 @@
       </div>
     </div>
 
+    <!-- CHANGE PLAYERS LEVEL -->
+    <div class="editPlayerContainer">
+        <h1>Modifier</h1>
+        <div class="editPlayerInner">
+          <input class="inputAddPlayer" placeholder="Axel"></input>
+          <div class="editPlayerLevel">
+            <span id="decreasePlayerLevel">-</span>
+            <img src="images/level1.png">
+            <span id="increasePlayerLevel">+</span>
+          </div>
+        </div>
+        <div class="editPlayerValidation">Valider</div>
+        <div class="editPlayerDelete">Supprimer le joueur</div>
+    </div>
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
