--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img src="images/logo.png" id="logoMentalo" alt="logo"/>
 
         <div class="containerAddPlayer">
-          <input placeholder="Entrer un joueur" class="inputAddPlayer"></input>
+          <input placeholder="Entrer un joueuraa" class="inputAddPlayer"></input>
           <button class="buttonAddPlayer"><p>+</p></button>
           <div class="beerCountContainer">
             <img id="firstDot" class="beerImg" src="images/beer.png"/>
