--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8"/>
-    <title>Mentalo</title>
+    <title>Mentaloaaaa</title>
     <meta name="description" content="description de la page"/>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
