--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+
     <div class="rouletteContainer">
         <img src="roulette.png" id="roulette">
         <img id="fleche" src="arrow.png" alt="Fleche manquante, en chercher une autre" height="50" width="400">
@@ -20,7 +20,7 @@
     </div>
 
     <div class="questionContainer">
-        <p class="questionTitle">Défi</p>
+        <p id="prenom" class="questionTitle">Défi</p>
         <p class="description">Réponds à la question ou bois le nombre de gorgées</p>
         <p class="question">Femme : tu as 30 secondes pour donner une érection à ton partenaire. Si tu y arrives il prend le nombre de gorgées indiquées. Sinon tu les prends.</p>
         <div class="timerContainer">
