--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <img id="settingsOpen" src="images/settings.png">
+    <img id="writeOpen" src="images/write.png">
     <!-- Page de séléction des joueurs -->
     <div class="pagePlayerSelect">
         <h1>Sékisa ?</h1>
@@ -78,6 +79,15 @@
         <div data="7" class="nbQuestionCase"><h4>7</h4></div>
         <div data="10" class="nbQuestionCase"><h4>10</h4></div>
       </div>
+    </div>
+
+    <!-- WRITE QUESTIONS -->
+    <div class="writeContainer">
+      <img id="writeBtnClose" src="images/close.png">
+      <h2>Écris une question</h2>
+      <textarea id="writeQuestionInput" class="inputAddPlayer" type="text"></textarea>
+      <h3 id="nbQuestionWritten">Total : 3</h3>
+      <div class="button1 buttonValidationPlayer writeQuestion"><h1 class="btnText">Envoyer</h1></div>
     </div>
 
     <!-- SOUNDS -->
