--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
       <button class="button1 absoluteShowBtn"><h1 class="btnText">Suivant</h1></button>
     </div>
 
+    <!-- FIN DE PARTIE -->
+    <div class="finPartieScreen">
+      <h1>Fin de partie !</h1>
+      <button class="prochaineManche button1"><h1 class="btnText">Prochaine partie</h1></button>
+    </div>
+
     <!-- SETTINGS -->
     <div class="settingsContainer">
       <img id="settingsBtnClose" src="images/close.png">
