--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
       <button class="button1 absoluteShowBtn"><h1 class="btnText">Suivant</h1></button>
     </div>
 
+    <!-- FIN DES QUESTIONS -->
+    <div class="finQuestionsScreen">
+      <h1>Maintenant, Sékisa ?</h1>
+      <h2>Trouvez qui a répondu à la question que vous verrez sur l'écran</h2>
+      <button class="startAnswer button1"><h1 class="btnText">Commencer</h1></button>
+    </div>
+
     <!-- FIN DE PARTIE -->
     <div class="finPartieScreen">
       <h1>Fin de partie !</h1>
@@ -114,5 +121,6 @@
     
 
     <script src="scripts/main.js"></script>
+
   </body>
 </html>
