--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 
     <!-- SETTINGS -->
     <div class="settingsContainer">
+      <div class="hotBtn"></div>
       <img id="settingsBtnClose" src="images/close.png">
       <h2>Paramètres</h2>
       <div class="iconSettingsContainer">
